--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Make Story Engine</title>
+<meta charset="UTF-8">
+<title>M.A. Lorien</title>
+<style>
+body {
+  font-family: Arial;
+  text-align: center;
+  padding: 40px;
+  background: #f4f4f4;
+}
+a {
+  display: block;
+  margin: 20px;
+  font-size: 18px;
+  text-decoration: none;
+  color: #333;
+}
+a:hover {
+  color: #0077cc;
+}
+</style>
 </head>
 <body>
-<h1>Make Story Engine</h1>
-<p>Make Story Engine is a private automation system used to manage and publish digital stories, images and videos using AI and automation tools.</p>
 
-<p>
-<a href="privacy.html">Privacy Policy</a><br>
-<a href="terms.html">Terms of Service</a>
-</p>
+<h1>M.A. Lorien</h1>
+<p>Stories for children & fantasy readers</p>
+
+<a href="neverland-it.html">Neverland – Italiano</a>
+<a href="neverland-en.html">Neverland – English</a>
+<a href="coccole-it.html">Coccole e Sogni</a>
+<a href="cuddles-en.html">Cuddles and Dreams</a>
+
 </body>
 </html>
