--- a/neverland-it.html
+++ b/neverland-it.html
@@ -17,7 +17,7 @@ a {display:inline-block; margin-top:20px; font-size:18px;}
 
 <p>Un nuovo viaggio verso l'isola che non c'è...</p>
 
-<a href="https://www.amazon.it/LIsola-che-non-cè-crescere/dp/B0GB8WZJLL?ref_=ast_author_dp" target="_blank">
+<a href="http://bit.ly/47d30RZ" target="_blank">
 Acquista su Amazon
 </a>
 
