--- a/neverland-it.html
+++ b/neverland-it.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-<meta charset="UTF-8">
-<title>Neverland - Un Nuovo Viaggio</title>
-<style>
-body {font-family: Arial; max-width:700px; margin:auto; padding:40px;}
-img {width:100%; margin-bottom:20px;}
-a {display:inline-block; margin-top:20px; font-size:18px;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Neverland – Un Nuovo Viaggio</title>
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 820px; margin: 0 auto; padding: 32px; line-height: 1.5; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 20px; }
+    img { width: 100%; border-radius: 12px; display:block; }
+    .btn { display:inline-block; padding: 12px 16px; border-radius: 10px; background:#111; color:#fff; text-decoration:none; margin-top: 14px; }
+    .muted { color:#666; font-size: 14px; margin-top: 18px; }
+    .toplinks a { color:#111; text-decoration:none; margin-right: 12px; font-size:14px; }
+  </style>
 </head>
 <body>
+  <div class="toplinks">
+    <a href="index.html">Home</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Termini</a>
+  </div>
 
-<h1>Neverland - Un Nuovo Viaggio</h1>
+  <h1>Neverland – Un Nuovo Viaggio</h1>
 
-<img src="images/neverland/Neverland01.jpg">
+  <div class="card">
+    <img src="images/neverland/Neverland01.jpg" alt="Neverland – Un Nuovo Viaggio cover o scena">
 
-<p>Un nuovo viaggio verso l'isola che non c'è...</p>
+    <p>
+      Un’avventura verso l’isola che non c’è: magia, scoperte e un nuovo viaggio da iniziare.
+    </p>
 
-<a href="http://bit.ly/47d30RZ" target="_blank">
-Acquista su Amazon
-</a>
+    <a class="btn" href="https://bit.ly/47d30RZ" target="_blank" rel="noopener noreferrer">
+      Acquista su Amazon
+    </a>
 
+    <p class="muted">
+      Se arrivi da Instagram, qui trovi il collegamento diretto al libro.
+    </p>
+  </div>
 </body>
 </html>
